# sigil_guard

./: .check.exs  .credo.exs  .doctor.exs  .formatter.exs  .gitignore  .sobelow-conf  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  checksum-Elixir.SigilGuard.Backend.NIF.Native.exs  mix.exs
.github/workflows/: ci.yml  publish.yml  release.yml
bench/: run.exs
bench/output/: benchmarks.md
config/: config.exs  dev.exs  test.exs
lib/: sigil_guard.ex
lib/sigil_guard/: application.ex  audit.ex  backend.ex  config.ex  envelope.ex  identity.ex  patterns.ex  policy.ex  registry.ex  scanner.ex  signer.ex  telemetry.ex  vault.ex
lib/sigil_guard/audit/: action.ex  actor.ex  event_type.ex  execution_result.ex  logger.ex
lib/sigil_guard/backend/: elixir.ex  nif.ex
lib/sigil_guard/identity/: binding.ex
lib/sigil_guard/registry/: cache.ex
lib/sigil_guard/signer/: ed25519.ex
lib/sigil_guard/vault/: entry.ex  in_memory.ex
native/sigil_guard_nif/: Cargo.toml
native/sigil_guard_nif/.cargo/: config.toml
native/sigil_guard_nif/src/: atoms.rs  audit.rs  envelope.rs  lib.rs  policy.rs  scanning.rs  types.rs
test/: sigil_guard_test.exs
test/sigil_guard/: audit_test.exs  backend_test.exs  config_test.exs  envelope_test.exs  identity_test.exs  patterns_test.exs  policy_test.exs  registry_test.exs  scanner_test.exs  signer_test.exs  vault_test.exs
test/sigil_guard/audit/: event_type_test.exs
test/sigil_guard/backend/: elixir_test.exs  nif_test.exs  parity_test.exs
test/sigil_guard/identity/: binding_test.exs
test/support/: test_signer.ex
(+1 files in other folders)
