[package]
name = "sigil_guard_nif"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Bohwalli <hi@futhr.io>"]
description = "Rustler NIF for SigilGuard — uses sigil-protocol crate for protocol operations"

[lib]
name = "sigil_guard_nif"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]

[dependencies]
rustler = "0.37"
sigil-protocol = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
regex = "1"
